# rogerRabbit-go

./: .gitignore  .gitmodules  LICENSE  README.md  azure-pipelines.yaml  channel_test.go  connection_test.go  doc.go  doc_api.go  functions.go  functions_test.go  go.mod  go.sum  makefile  pip-freeze.txt  revive.toml  setup.cfg  setup.py  tools.go
amqp/: benchmarks_test.go  channel.go  channelEventRelays.go  channelEventRelaysSync.go  channelHandlers.go  channelHandlersArgs.go  channelHandlersBase.go  channelHandlersBuilder.go  channelHandlersDefault.go  channelHooks.go  channel_test.go  common.go  config.go  configChannelMiddleware.go  configConnMiddleware.go  confirmation.go  connection.go  connectionDial.go  connectionTester.go  connection_test.go  consts.go  consts_test.go  dataAliases.go  delivery.go  doc.go  errAliases.go  errors.go  eventRelayConsume.go  eventRelayNotifyCancel.go  eventRelayNotifyFlow.go  eventRelayNotifyPublish.go  eventRelayNotifyReturn.go  examples_test.go  init_test.go  streadwayAliases.go  testUtils.go  transportManager.go  transportManagerHandlers.go  transportManagerHandlersBase.go  transportManagerHandlersBuilder.go  (+1 more)
amqp/amqpMiddleware/: doc.go  handlerDefs.go  methodArgs.go  middlewareDefs.go
amqp/amqpmiddleware/: doc.go  handlerDefs.go  metadata.go  methodArgs.go  methodResults.go  middlewareDefs.go  providers.go
amqp/data/: confirmation.go  delivery.go
amqp/dataModels/: confirmation.go  delivery.go  doc.go
amqp/datamodels/: confirmation.go  delivery.go  doc.go
amqp/defaultMiddlewares/: confirms.go  deliveryTags.go  doc.go  flow.go  publishTag.go  qos.go  routeDeclaration.go
amqp/defaultmiddlewares/: confirms.go  deliveryTags.go  doc.go  flow.go  logging.go  publishTag.go  qos.go  routeDeclaration.go
amqpTest/: testSuite.go  testUtils.go  testers.go
amqptest/: doc.go  testSuite.go  testUtils.go  testers.go
docs/: .buildinfo  amqp.html  genindex.html  index.html  objects.inv  overview.html  roger.html  search.html  searchindex.js
docs/_sources/: amqp.rst.txt  index.rst.txt  overview.rst.txt  roger.rst.txt
docs/_static/: documentation_options.js  godoc-root.html  godoc.10.html  godoc.11.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  godoc.7.html  godoc.8.html  godoc.9.html  logo attributions.txt  style.css
roger/: consumer.go  consumer_test.go  doc.go  examples_test.go  producer.go  producer_test.go
(+107 files in other folders)
