[version]
target = 0.2
release =

[metadata]
name = islelib
git_org = github.com/illuscio-dev

[testing]
coverage_required = 0.85
test_package = ./...
exclude =

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links =

[docs.proto]
paths =

[proto]
# The root directory to your proto definitions
root_source_path =
# The root package name for your go module used for protoc-gen-go
root_go_package =
# The output path name for the generated python code
python_output_path =
# The original import path that python generation spits out
python_import_original =
# The fixed python path that should replace the original
python_import_replacement =

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = islelib
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build
