[version]
target = 0.0
release = 0.0.11

[metadata]
name = rogerRabbit
git_org = github.com/peake100

[testing]
coverage_required = 0.85
test_package = ./...
exclude = 
	./zdevelop

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[docs.proto]
paths = 

[proto]
root_source_path = 
root_go_package = 
python_output_path = 
python_import_original = 
python_import_replacement = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = rogerRabbit
copyright = '2020, Billy Peake'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

